# nanotui

./: .gitignore  CMakeLists.txt
examples/: button_example.c  hello.c  test2.c
include/nanotui/: node.h  render.h  ui.h  widget.h
include/nanotui/layouts/: hbox.h  vbox.h
include/nanotui/widgets/: button.h  checkbox.h  label.h  line_edit.h
src/: backend_ncurses.c  node.c  node_internal.h  render.c  ui.c  widget.c  widget_internal.h
src/layouts/: hbox.c  vbox.c
src/widgets/: button.c  checkbox.c  label.c  line_edit.c
